test/arrays/diten/vectorArrayMisuse.good
vectorArrayMisuse.chpl:6: error: halt reached - cannot call push_back on an array defined over a domain with multiple arrays
